--- a/404.html
+++ b/404.html
@@ -4,14 +4,20 @@
   <meta charset="utf-8">
   <title>Not found</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <!-- Instant redirect to the app with a cache-buster -->
+  <meta http-equiv="refresh" content="0; url=/index.html?fresh=1">
   <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
-  <main class="layout" style="grid-template-columns: 1fr;">
+  <main class="layout" style="grid-template-columns:1fr;">
     <section class="results_area">
       <h1>Page not found</h1>
-      <p><a href="/">Go to the app</a></p>
+      <p>Taking you to the app. If nothing happens, <a href="/index.html?fresh=1">click here</a>.</p>
     </section>
   </main>
+  <script>
+    // Fallback in case the meta refresh is blocked
+    window.location.replace("/index.html?fresh=1");
+  </script>
 </body>
 </html>
